[gd_scene load_steps=10 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]
[ext_resource path="res://Story.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 195.0
margin_right = 1232.0
margin_bottom = 595.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "placeholder text"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 599.0
margin_right = 1232.0
margin_bottom = 672.0
custom_constants/separation = 12
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 1077.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 1089.0
margin_right = 1162.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 1174.0
margin_top = 5.0
margin_right = 1232.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "Ok"

[node name="Storybook" type="Node" parent="."]

[node name="Story0" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a noun", "an adverb", "an adjective" )
story = "Once upon a time %s ate %s flavoured sandwich which made him feel all %s. It was a %s day."

[node name="Story1" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a noun", "a name", "an adverb", "an adjective" )
story = "One day %s fell on %s's foot %s. What a %s day!"

[node name="Story2" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a verb", "a noun", "an adverb", "a name" )
story = "If you wish to %s a %s, you should %s talk to %s first and ask for approval."
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
